add: 四数之和
1. 转化思路，变成三数之和、俩数之和的题目；记住特殊用例